--- a/assets/style.css
+++ b/assets/style.css
@@ -10,21 +10,18 @@ body {
 header {
     color: black;
     text-align: center;
-    //padding: 10px 20px;
     background-color: white;
     text-decoration: none;
     color: inherit;
-    height:100px;
-    //background-color: rgba(0, 0, 0, 0.5);
+    height: 100px;
 }
 
 header img {
     max-width: 100%;
     height: auto;
-    max-height:110px;
+    max-height: 110px;
     margin: 0;
 }
-
 
 header h1 {
     margin: 0;
@@ -69,7 +66,7 @@ header h1 {
     flex-direction: column;
     gap: 10px;
     border-radius: 5px;
-    height:100%;
+    height: 100%;
 }
 
 .right-section {
@@ -77,13 +74,10 @@ header h1 {
     max-width: 55%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    //border: 1px solid #c4c4c4;
     background-color: #fff;
     border-radius: 5px;
-    padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height:100%;
+    height: 100%;
 }
 
 .calculator-section {
@@ -120,25 +114,42 @@ header h1 {
 
 .input-field {
     display: flex;
+    flex-wrap: wrap;
+    //flex-direction:column;
+    //align-items:flex-start;
     align-items: center;
     margin-bottom: 15px;
+    gap:10px;
 }
 
 .input-field label {
-    flex: 1;
+    flex: 0 0 auto;
     font-size: 16px;
     color: #333;
-    margin-right: 10px;
+    margin-bottom:5px;
 }
 
-.input-field input {
-    flex: 2;
+.input-field input[type="number"] {
+    flex: 1;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #c4c4c4;
+    border: 1px solid black;
     border-radius: 5px;
-    width: 100%;
-    box-sizing: border-box;
+    //width: 100%;
+    align:right;
+    //box-sizing: border-box;
+    max-width: 200px; 
+    margin-left: auto;
+    background-color: #FF7F7F;
+    //opacity: 0.3;
+    //color:solid black;
+    color: #d31f26;
+    font-weight:bold;
+}
+.input-field input[type="range"] {
+    width: 90%;
+    margin-top:5px;
+    accent-color: #FF7F7F; ;
 }
 
 .button-container {
@@ -175,14 +186,35 @@ button#calculateButton:hover {
 
 .image-banner img {
     width: 100%;
-    border-radius: 5px;
+    //border-radius: 5px;
     object-fit: cover;
+    margin-bottom:10px;
 }
 
 .cta-links {
     width: 100%;
     display: flex;
+    //border-radius: 5px;
     flex-direction: column;
+    background-color: #000;
+}
+
+.cta-links a {
+    text-decoration: none;
+    text-align: center;
+    //background-color: ;
+    color: #ffff;
+    padding: 10px;
+    background-color:#0000;
+    //border-radius: 5px;
+    //border: 1px solid #c4c4c4;
+    transition: background-color 0.3s ease;
+    //margin-bottom: 100px;
+}
+
+.cta-links a:hover {
+    background-color: #ffff;
+    color: black;
 }
 
 .cta-links h3 {
@@ -190,22 +222,6 @@ button#calculateButton:hover {
     font-weight: bold;
     margin-bottom: 15px;
     color: #333;
-}
-
-.cta-links a {
-    text-align: left;
-    background-color: #f9f9f9;
-    color: #333;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #c4c4c4;
-    transition: background-color 0.3s ease;
-}
-
-.cta-links a:hover {
-    background-color: #0056b3;
-    color: #fff;
 }
 
 @media (max-width: 768px) {
@@ -219,6 +235,10 @@ button#calculateButton:hover {
         flex: 0 0 100%;
         max-width: 100%;
         background-color: white;
+    }
+
+    .blog-card {
+        width: calc(50% - 20px);
     }
 }
 
@@ -234,6 +254,10 @@ button#calculateButton:hover {
 
     .input-field input {
         font-size: 14px;
+    }
+
+    .blog-card {
+        width: 100%;
     }
 }
 
@@ -260,7 +284,7 @@ button#calculateButton:hover {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
@@ -321,9 +345,9 @@ button#calculateButton:hover {
 .blog-card {
     background-color: #fff;
     //border: 1px solid #c4c4c4;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: calc(33.333% - 20px);
     padding: 20px;
     box-sizing: border-box;
