--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,7 @@ header h1 {
     gap: 10px;
     border-radius: 5px;
     height: 100%;
+    
 }
 
 .right-section {
@@ -76,7 +77,7 @@ header h1 {
     flex-direction: column;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    //box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
     height: 100%;
 }
 
@@ -84,12 +85,13 @@ header h1 {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .result-section {
-    background-color: #fff;
+    background-color: #FF7F7F;
     padding: 20px;
+    border-radius:8px;
     text-align: left;
 }
 
@@ -98,6 +100,7 @@ header h1 {
     padding: 20px;
     border-radius: 8px;
     text-align: justify;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .description-section h3 {
@@ -177,7 +180,7 @@ button#calculateButton:hover {
 }
 
 .calculated-result {
-    background-color: #ffff;
+    //background-color: #ffff;
     border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
@@ -186,17 +189,19 @@ button#calculateButton:hover {
 
 .image-banner img {
     width: 100%;
-    //border-radius: 5px;
+    border-radius: 5px;
     object-fit: cover;
     margin-bottom:10px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .cta-links {
     width: 100%;
     display: flex;
-    //border-radius: 5px;
+    border-radius: 5px;
     flex-direction: column;
     background-color: #000;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .cta-links a {
@@ -284,7 +289,7 @@ button#calculateButton:hover {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .faq-question {
@@ -345,7 +350,7 @@ button#calculateButton:hover {
 .blog-card {
     background-color: #fff;
     //border: 1px solid #c4c4c4;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
     text-align: center;
     width: calc(33.333% - 20px);
@@ -375,4 +380,13 @@ footer {
     padding: 10px;
     background-color: #333;
     color: white;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
