--- a/assets/styles.css
+++ b/assets/styles.css
@@ -52,7 +52,7 @@ header h1 {
 }
 
 .hero {
-    background-image: url('assets\img\calculator image.jpg');
+    background-image: url('https://www.shutterstock.com/image-photo/top-view-calculator-pencil-notebook-260nw-2200761767.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -119,14 +119,15 @@ header h1 {
     border-radius: 8px;
     padding: 20px;
     text-decoration: none;
+    //border:3px solid rgba(0, 0, 0,0.1);
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.15);
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .calculator-box:hover {
     transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .calculator-box h3 {
@@ -162,6 +163,7 @@ header h1 {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
+    
 }
 
 .faq-section {
@@ -179,7 +181,8 @@ header h1 {
     background-color: #fff;
     border-radius: 8px;
     //border: 1px solid #c4c4c4;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    //border:3px solid rgba(0, 0, 0,0.1);
+    box-shadow: 0 0px 6px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
@@ -240,7 +243,8 @@ header h1 {
 .blog-card {
     background-color: #fff;
     //border: 1px solid #c4c4c4;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border:3px solid rgba(0, 0, 0,0.1);
+    //box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
     width: calc(33.333% - 20px);
