--- a/assets/styles.css
+++ b/assets/styles.css
@@ -242,9 +242,7 @@ header h1 {
 
 .blog-card {
     background-color: #fff;
-    //border: 1px solid #c4c4c4;
-    border:3px solid rgba(0, 0, 0,0.1);
-    //box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
     width: calc(33.333% - 20px);
