--- a/assets/style.css
+++ b/assets/style.css
@@ -67,7 +67,6 @@ header h1 {
     gap: 10px;
     border-radius: 5px;
     height: 100%;
-    
 }
 
 .right-section {
@@ -75,9 +74,8 @@ header h1 {
     max-width: 55%;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
     border-radius: 5px;
-    //box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     height: 100%;
 }
 
@@ -85,13 +83,13 @@ header h1 {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .result-section {
     background-color: #FF7F7F;
     padding: 20px;
-    border-radius:8px;
+    border-radius: 8px;
     text-align: left;
 }
 
@@ -100,7 +98,7 @@ header h1 {
     padding: 20px;
     border-radius: 8px;
     text-align: justify;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .description-section h3 {
@@ -118,18 +116,16 @@ header h1 {
 .input-field {
     display: flex;
     flex-wrap: wrap;
-    //flex-direction:column;
-    //align-items:flex-start;
     align-items: center;
     margin-bottom: 15px;
-    gap:10px;
+    gap: 10px;
 }
 
 .input-field label {
     flex: 0 0 auto;
     font-size: 16px;
     color: #333;
-    margin-bottom:5px;
+    margin-bottom: 5px;
 }
 
 .input-field input[type="number"] {
@@ -138,21 +134,17 @@ header h1 {
     font-size: 16px;
     border: 1px solid black;
     border-radius: 5px;
-    //width: 100%;
-    align:right;
-    //box-sizing: border-box;
-    max-width: 200px; 
+    max-width: 200px;
     margin-left: auto;
     background-color: #FF7F7F;
-    //opacity: 0.3;
-    //color:solid black;
     color: #d31f26;
-    font-weight:bold;
+    font-weight: bold;
 }
+
 .input-field input[type="range"] {
     width: 90%;
-    margin-top:5px;
-    accent-color: #FF7F7F; ;
+    margin-top: 5px;
+    accent-color: #FF7F7F;
 }
 
 .button-container {
@@ -180,7 +172,6 @@ button#calculateButton:hover {
 }
 
 .calculated-result {
-    //background-color: #ffff;
     border-radius: 8px;
     font-size: 16px;
     font-weight: bold;
@@ -191,8 +182,8 @@ button#calculateButton:hover {
     width: 100%;
     border-radius: 5px;
     object-fit: cover;
-    margin-bottom:10px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    margin-bottom: 10px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cta-links {
@@ -201,20 +192,16 @@ button#calculateButton:hover {
     border-radius: 5px;
     flex-direction: column;
     background-color: #000;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cta-links a {
     text-decoration: none;
     text-align: center;
-    //background-color: ;
     color: #ffff;
     padding: 10px;
-    background-color:#0000;
-    //border-radius: 5px;
-    //border: 1px solid #c4c4c4;
+    background-color: #0000;
     transition: background-color 0.3s ease;
-    //margin-bottom: 100px;
 }
 
 .cta-links a:hover {
@@ -272,7 +259,6 @@ button#calculateButton:hover {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    
 }
 
 .faq-section {
@@ -289,9 +275,7 @@ button#calculateButton:hover {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    //border: 1px solid #c4c4c4;
-    //border:3px solid rgba(0, 0, 0,0.1);
-    box-shadow: 0 0px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
@@ -351,8 +335,7 @@ button#calculateButton:hover {
 
 .blog-card {
     background-color: #fff;
-    //border: 1px solid #c4c4c4;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
     width: calc(33.333% - 20px);
@@ -383,6 +366,7 @@ footer {
     background-color: #333;
     color: white;
 }
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -392,12 +376,13 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
 .input-error {
-  border: 2px solid red;
+    border: 2px solid red;
 }
 
 .error-message {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
 }
