--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,12 +10,10 @@ body {
 header {
     color: black;
     text-align: center;
-    //padding: 10px 20px;
     background-color: white;
     text-decoration: none;
     color: inherit;
     height:100px;
-    //background-color: rgba(0, 0, 0, 0.5);
 }
 
 header img {
@@ -36,7 +34,6 @@ header h1 {
     align-items: center;
     justify-content: center;
     background-color: white;
-    //padding: 5px 10px;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -48,7 +45,6 @@ header h1 {
     font-weight: bold;
     color: #333;
     margin: 0;
-    //padding: 5px 0;
 }
 
 .hero {
@@ -96,7 +92,7 @@ header h1 {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-}
+    }
 
 .calculators h2 {
     font-size: 30px;
@@ -108,7 +104,7 @@ header h1 {
 
 .calculator-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Dynamic grid layout */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     justify-content: center;
     align-items: stretch;
@@ -119,9 +115,8 @@ header h1 {
     border-radius: 8px;
     padding: 20px;
     text-decoration: none;
-    //border:3px solid rgba(0, 0, 0,0.1);
     text-align: center;
-    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -147,13 +142,13 @@ header h1 {
 
 @media (max-width: 768px) {
     .calculator-grid {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* At least 2 calculators */
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
 }
 
 @media (max-width: 480px) {
     .calculator-grid {
-        grid-template-columns: repeat(2, 1fr); /* Force 2 calculators for very small screens */
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -163,7 +158,7 @@ header h1 {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .faq-section {
@@ -180,9 +175,7 @@ header h1 {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    //border: 1px solid #c4c4c4;
-    //border:3px solid rgba(0, 0, 0,0.1);
-    box-shadow: 0 0px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
