--- a/assets/style.css
+++ b/assets/style.css
@@ -1,395 +1,520 @@
 body {
-    font-family: 'Poppins', Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #ffff;
-    color: #333;
+  font-family: "Poppins", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #ffff;
+  color: #202020;
 }
 
 header {
-    color: black;
-    text-align: center;
-    background-color: white;
-    text-decoration: none;
-    color: inherit;
-    height: 100px;
+  color: black;
+  text-align: center;
+  background-color: white;
+  text-decoration: none;
+  color: inherit;
+  height: 100px;
 }
 
 header img {
-    max-width: 100%;
-    height: auto;
-    max-height: 110px;
-    margin: 0;
+  max-width: 100%;
+  height: auto;
+  max-height: 110px;
+  margin: 0;
 }
 
 header h1 {
-    margin: 0;
-    font-size: 24px;
-    line-height: 1.2;
+  margin: 0;
+  font-size: 24px;
+  line-height: 1.2;
 }
 
 .header-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    padding: 5px 10px;
-    max-width: 1200px;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  padding: 5px 10px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .logo {
-    flex: 1;
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    margin: 0;
-    padding: 5px 0;
+  flex: 1;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #202020;
+  margin: 0;
+  padding: 5px 0;
 }
 
 .main-container {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    gap: 20px;
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 20px;
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
 }
 
 .left-section {
-    flex: 0 0 60%;
-    max-width: 60%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border-radius: 5px;
-    height: 100%;
+  flex: 0 0 60%;
+  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 5px;
+  height: 100%;
 }
 
 .right-section {
-    flex: 0 0 40%;
-    max-width: 55%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
-    height: 100%;
+  flex: 0 0 40%;
+  max-width: 55%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
 }
 
 .calculator-section {
-    background-color: #fff;
+  background-color: #ffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
+  color: #202020;
+}
+.result-section {
+    background-color: #0c457c;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    //width: 100%;
+    //margin: auto;
 }
 
 .result-section {
-    background-color: #FF7F7F;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: left;
+  background-color: #0c457c;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: left;
+  color: white;
 }
 
 .description-section {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: justify;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: justify;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .description-section h3 {
-    color: #d31f26;
+  color: #0c457c;
 }
-
 .calculator-section h2,
-.result-section h2,
+.result-section h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
 .description-section h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    color: #d31f26;
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #0c457c;
 }
 
 .input-field {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-bottom: 15px;
-    gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 15px;
+  gap: 10px;
+  color: #202020;
 }
 
 .input-field label {
-    flex: 0 0 auto;
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 5px;
+  flex: 0 0 auto;
+  font-size: 16px;
+  color: #202020;
+  margin-bottom: 5px;
 }
 
 .input-field input[type="number"] {
-    flex: 1;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid black;
-    border-radius: 5px;
-    max-width: 200px;
-    margin-left: auto;
-    background-color: #FF7F7F;
-    color: #d31f26;
-    font-weight: bold;
+  flex: 1;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-bottom: 2px solid black;;
+  border-radius: 0;
+  max-width: 200px;
+  margin-left: auto;
+  background-color: transparent;
+  background-color: #ffff;
+  color: #202020;
+  font-weight: bold;
+   outline: none;
 }
 
 .input-field input[type="range"] {
-    width: 90%;
-    margin-top: 5px;
-    accent-color: #FF7F7F;
+  width: 100%; /* Decreased width */
+  margin-top: 5px;
+  -webkit-appearance: none; /* Removes default styling */
+  appearance: none;
+    //background: #ddd; /* Track background */
+  height: 4px; /* Adjusts track thickness */
+  border-radius: 2px; /* Slightly rounded edges */
+  outline: none;
 }
 
+/* Customizing the thumb (slider knob) */
+.input-field input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 18px; /* Size of the thumb */
+  height: 18px;
+  border: 3px solid #0c457c; /* Blue border */
+  background-color: white; /* White center */
+  border-radius: 50%; /* Makes it circular */
+  cursor: pointer;
+}
+
+.input-field input[type="range"]::-moz-range-thumb {
+  width: 18px;
+  height: 18px;
+  border: 3px solid #0c457c;
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.input-field input[type="range"] {
+  background: linear-gradient(to right, #0c457c 0%, #0c457c var(--progress), #ddd var(--progress), #ddd 100%);
+  transition: background 0.15s ease-in-out;
+}
+
+/* Hover and active effects */
+.input-field input[type="range"]:hover::-webkit-slider-thumb {
+  border-color: #083b6c; /* Slightly darker blue on hover */
+}
+
+.input-field input[type="range"]:active::-webkit-slider-thumb {
+  transform: scale(1.1); /* Slightly enlarges the thumb on active */
+}
+
+
 .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button#calculateButton {
-    padding: 10px 20px;
-    background-color: black;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
-    border: none;
-    text-align: center;
+  padding: 10px 20px;
+  background-color: white;
+  color: #0c457c;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+  border: none;
+  text-align: center;
 }
 
 button#calculateButton:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid #c4c4c4;
+  background-color: #0c457c;
+  color: white;
+  border: 1px solid white;
 }
 
-.calculated-result {
-    border-radius: 8px;
-    font-size: 16px;
+/* Result Section */
+
+/* CAGR Title */
+.result-title {
+    font-size: 20px;
     font-weight: bold;
-    text-align: left;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
-.image-banner img {
+/* Horizontal Divider */
+.divider {
+    width: 90%;
+    border: 1px solid white;
+    margin: 10px auto;
+}
+
+/* Beginning & Ending Year */
+.year-details {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 10px auto;
+    font-size: 16px;
+}
+
+/* CAGR Range Bar */
+.result-bar-container {
+    width: 90%;
+    margin: 15px auto;
+    position: relative;
+}
+
+.result-bar {
     width: 100%;
+    height: 10px;
+    background-color: #c4c4c4;
     border-radius: 5px;
-    object-fit: cover;
-    margin-bottom: 10px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.result-filled {
+    height: 100%;
+    width: 1%; /* Default width, updated dynamically */
+    background-color: #1e73e8;
+    border-radius: 5px;
+    transition: width 0.5s ease-in-out;
+}
+/* Flex container for Beginning & Ending Value */
+.value-details {
+    display: flex;
+    justify-content: space-between; /* Ensures left & right alignment */
+    align-items: center;
+    width: 100%; /* Full width */
+    max-width: 600px;
+    margin: 10px auto; /* Centering the section */
+    font-size: 16px;
+}
+
+/* Aligns left and right sections properly */
+.value-details .left {
+    text-align: center;
+    flex: 1;
+}
+
+.value-details .right {
+    text-align: center;
+    flex: 1;
+}
+.value-details .center {
+    text-align: center;
+    flex: 1;
+}
+.image-banner img {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+  margin-bottom: 10px;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cta-links {
-    width: 100%;
-    display: flex;
-    border-radius: 5px;
-    flex-direction: column;
-    background-color: #000;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  display: flex;
+  border-radius: 5px;
+  flex-direction: column;
+  background-color: #000;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cta-links a {
-    text-decoration: none;
-    text-align: left;
-    color: #ffff;
-    padding: 10px;
-    background-color: #0000;
-    transition: background-color 0.3s ease;
+  text-decoration: none;
+  text-align: left;
+  color: #ffff;
+  padding: 10px;
+  background-color: #0000;
+  transition: background-color 0.3s ease;
 }
 
 .cta-links a:hover {
-    background-color: #ffff;
-    color: black;
+  background-color: #ffff;
+  color: black;
 }
 
 .cta-links h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: #333;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: #202020;
 }
 
 @media (max-width: 768px) {
-    .main-container {
-        flex-direction: column;
-        align-items: center;
-    }
+  .main-container {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .left-section,
-    .right-section {
-        flex: 0 0 100%;
-        max-width: 100%;
-        background-color: white;
-    }
-    .right-section h3{
-        margin-bottom:0px;
-        text-align:left;
-        margin-radius:5px;
-        //background-color:black;
-        padding:10px;
-    }
-    .blog-card {
-        width: calc(50% - 20px);
-    }
+  .left-section,
+  .right-section {
+    flex: 0 0 100%;
+    max-width: 100%;
+    background-color: white;
+  }
+  .right-section h3 {
+    margin-bottom: 0px;
+    text-align: left;
+    margin-radius: 5px;
+    //background-color:black;
+    padding: 10px;
+  }
+  .blog-card {
+    width: calc(50% - 20px);
+  }
 }
 
 @media (max-width: 480px) {
-    header h1 {
-        font-size: 20px;
-    }
+  header h1 {
+    font-size: 20px;
+  }
 
-    button#calculateButton {
-        width: 100%;
-        font-size: 14px;
-    }
+  button#calculateButton {
+    width: 100%;
+    font-size: 14px;
+  }
 
-    .input-field input {
-        font-size: 14px;
-    }
+  .input-field input {
+    font-size: 14px;
+  }
 
-    .blog-card {
-        width: 100%;
-    }
+  .blog-card {
+    width: 100%;
+  }
 }
 
 .faq {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
 }
 
 .faq-section {
-    max-width: 1200px;
-    margin: 10px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
+  max-width: 1200px;
+  margin: 10px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
 }
 
 .faq-item {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .faq-question {
-    display: flex;
-    justify-content: space-between;
-    align-items: left;
-    cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+  cursor: pointer;
 }
 
 .faq-question h3 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-    color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  color: #333;
 }
 
 .faq-toggle {
-    font-size: 20px;
-    font-weight: bold;
-    color: #ff6600;
-    transition: transform 0.3s ease;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ff6600;
+  transition: transform 0.3s ease;
 }
 
 .faq-answer {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease;
-    margin-top: 10px;
-    color: #555;
-    font-size: 16px;
-    text-align: justify;
-    line-height: 1;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  margin-top: 10px;
+  color: #555;
+  font-size: 16px;
+  text-align: justify;
+  line-height: 1;
 }
 
 .faq-item.active .faq-answer {
-    max-height: 150px;
+  max-height: 150px;
 }
 
 .faq-item.active .faq-toggle {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .blogs h2 {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .blog-carousel {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 20px;
 }
 
 .blog-card {
-    background-color: #fff;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    text-align: center;
-    width: calc(33.333% - 20px);
-    padding: 20px;
-    box-sizing: border-box;
+  background-color: #fff;
+  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  text-align: center;
+  width: calc(33.333% - 20px);
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .blog-card img {
-    width: 100%;
-    border-radius: 5px;
-    max-height: 100px;
+  width: 100%;
+  border-radius: 5px;
+  max-height: 100px;
 }
 
 @media (max-width: 768px) {
-    .blog-card {
-        width: calc(50% - 20px);
-    }
+  .blog-card {
+    width: calc(50% - 20px);
+  }
 }
 
 @media (max-width: 480px) {
-    .blog-card {
-        width: 100%;
-    }
+  .blog-card {
+    width: 100%;
+  }
 }
 
 footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #333;
-    color: white;
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: white;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 .input-error {
-    border: 2px solid red;
+  border: 2px solid red;
 }
 
 .error-message {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
 }
