--- a/assets/styles.css
+++ b/assets/styles.css
@@ -97,11 +97,16 @@ header h1 {
 .calculators h2 {
     font-size: 30px;
     margin-bottom: 20px;
-    color: #d31f26;
+    color: #0c457c;
+    //margin: 0;#d31f26;
     text-align: center;
     text-decoration: none;
 }
-
+.calculator-content {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Space between icon and title */
+}
 .calculator-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -115,31 +120,50 @@ header h1 {
     border-radius: 8px;
     padding: 20px;
     text-decoration: none;
-    text-align: center;
+    //text-align: center;
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
 }
-
+.calculator-content {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Space between icon and title */
+}
 .calculator-box:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.calculator-box h3 {
-    font-size: 18px;
-    color: #d31f26;
-    margin-bottom: 10px;
-    text-align: center;
+.calculator-content i {
+    font-size: 58px;
+    margin:1px;
+    color:#0c457c;
+}
+
+/* Right: Title */
+.calculator-title {
+    font-size: 20px;
+    color: #0c457c;
+    margin: 0;
+    align-items:right;
     text-decoration: none;
 }
 
 .calculator-box p {
     font-size: 14px;
     color: #555;
-    line-height: 1.5;
-    text-align: center;
+    line-height: 1;
+    text-align: left;
 }
-
+.calculate-now {
+    display: block;
+    font-size: 14px;
+    color: #0c457c;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: right;
+    margin-top: 0px;
+}
 @media (max-width: 768px) {
     .calculator-grid {
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
