--- a/assets/style.css
+++ b/assets/style.css
@@ -87,18 +87,18 @@ header h1 {
   color: #202020;
 }
 .result-section {
-    background-color: #0c457c;
+    background-color: #346858;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
     color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    //width: 100%;
-    //margin: auto;
+    /* //width: 100%; */
+    /* //margin: auto; */
 }
 
 .result-section {
-  background-color: #0c457c;
+  background-color: #346858;
   padding: 20px;
   border-radius: 8px;
   text-align: left;
@@ -165,7 +165,7 @@ header h1 {
   margin-top: 5px;
   -webkit-appearance: none; /* Removes default styling */
   appearance: none;
-    //background: #ddd; /* Track background */
+    /* //background: #ddd; Track background */
   height: 4px; /* Adjusts track thickness */
   border-radius: 2px; /* Slightly rounded edges */
   outline: none;
@@ -322,14 +322,14 @@ button#calculateButton:hover {
   display: flex;
   border-radius: 5px;
   flex-direction: column;
-  background-color: #000;
+  background-color: #F5ECD5;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cta-links a {
   text-decoration: none;
   text-align: left;
-  color: #ffff;
+  color: #d20c49;
   padding:  10px;
   background-color: #0000;
   transition: background-color 0.3s ease;
@@ -365,8 +365,8 @@ button#calculateButton:hover {
   .right-section h3 {
     margin-bottom: 0px;
     text-align: left;
-    margin-radius: 5px;
-    //background-color:black;
+    /* margin-radius: 5px; */
+    /* //background-color:black; */
     padding: 10px;
   }
   .blog-card {
@@ -515,8 +515,11 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 input[type="number"] {
-  -moz-appearance: textfield;
+  appearance: textfield;
+  -moz-appearance: textfield; /* Firefox */
+  -webkit-appearance: textfield; /* Chrome, Safari, Edge */
 }
+
 
 .input-error {
   border: 2px solid red;
