--- a/assets/styles.css
+++ b/assets/styles.css
@@ -98,7 +98,7 @@ header h1 {
     font-size: 30px;
     margin-bottom: 20px;
     color: #0c457c;
-    //margin: 0;#d31f26;
+    /* //margin: 0;#d31f26; */
     text-align: center;
     text-decoration: none;
 }
@@ -120,7 +120,7 @@ header h1 {
     border-radius: 8px;
     padding: 20px;
     text-decoration: none;
-    //text-align: center;
+    /* //text-align: center; */
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
 }
