--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Poppins", Arial, sans-serif;
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #ffff;
@@ -51,17 +50,18 @@ header h1 {
 
 .main-container {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  gap: 20px;
+  flex-wrap: nowrap; /* Ensures side-by-side layout on large screens */
+  justify-content: center;
+  column-gap: 10px; /* Adds horizontal spacing */
   max-width: 1200px;
   margin: 20px auto;
-  padding: 20px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .left-section {
   flex: 0 0 60%;
-  max-width: 60%;
+  /* max-width: 60%; */
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -71,13 +71,41 @@ header h1 {
 
 .right-section {
   flex: 0 0 40%;
-  max-width: 55%;
+  /* max-width: 38%; */
   display: flex;
   flex-direction: column;
   border-radius: 5px;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
   height: 100%;
 }
+
+
+ /* Responsive Design for Mobile Screens */
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column; /* Stacks the sections vertically */
+    align-items: center;
+  }
+
+  .left-section,
+  .right-section {
+    flex: 0 0 100%; /* Each section takes full width */
+    max-width: 100%; /* Ensure it doesn't exceed full width */
+    margin-bottom: 20px; /* Add spacing between sections */
+  }
+
+  .logo {
+  flex: 1;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #202020;
+  margin: 0;
+  padding: 5px 0;
+}
+}
+
+
 
 .calculator-section {
   background-color: #ffff;
